fixed many smaller ui-bugs like offsets and missalignments

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -79,6 +79,9 @@
     @media only screen and (max-width: 769px) {
       padding-left: 15px;
     }
+    .addCredential{
+      padding-top: 1px;
+    }
   }
 }
 @media only screen and (max-width: 768px){
