--- a/sass/credentials.scss
+++ b/sass/credentials.scss
@@ -381,6 +381,9 @@
             float: left;
           }
         }
+        .password-settings-padding-left-fix{
+          padding-left: 0 !important;
+        }
       }
       .field-value {
         .valueInput {
@@ -394,7 +397,7 @@
         }
         .selectType {
           padding-left: 0;
-          margin-left: -4px;
+          margin-left: 0px;
           select {
             @include border-left-radius(0);
           }
@@ -454,6 +457,13 @@
       .otpText {
         padding-right: 10px;
       }
+
+      .import-selection{
+        select{
+          margin-left: 15px;
+        }
+      }
+
     }
 
     .main_list{
@@ -634,7 +644,7 @@
 .icon-label {
   overflow: hidden;
   input {
-    width: calc(100% - 45px) !important;
+    width: calc(100% - 28px) !important;
     float: left;
     background: #fff;
     color: #555;
@@ -643,17 +653,19 @@
     border: 1px solid #ddd;
     outline: none;
     border-radius: 3px;
-    margin: 3px 3px 3px 0;
+    margin: 3px 0 3px 0;
     padding: 7px 6px 5px;
     font-size: 13px;
     @include border-left-radius(0)
   }
   .icon-picker {
-    //position: relative;
-    //@include border-left-radius(3px);
+    position: relative;
+    @include border-left-radius(3px);
+    line-height: 25px;
     float: left;
-    margin-top: 3px;
-    padding-top: 7px;
+    transform:translateY(105%);
+    margin: 3px 0;
+    padding: 6px 0;
     .cell {
       //min-height: 44px;
       margin-top: 0px;
