--- a/sass/partials/pwgen.scss
+++ b/sass/partials/pwgen.scss
@@ -23,7 +23,7 @@
 .pw-gen{
   overflow:hidden;
   input{
-    width: calc(100% - 80px) !important;
+    width: calc(100% - 76px) !important;
     float: left;
     background: #fff;
     color: #555;
